plugins {
    id 'java'
    id 'java-library'
}

java {
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}

group 'net.sentientturtle'
version '0.1'

compileJava {
    options.encoding = "UTF-8"
    options.compilerArgs << '-Xlint:unchecked'
    options.compilerArgs << '-Xlint:deprecation'
}

compileTestJava {
    options.encoding = "UTF-8"
    options.compilerArgs << '--enable-preview'

    options.compilerArgs << '-Xlint:unchecked'
    options.compilerArgs << '-Xlint:deprecation'
}

repositories {
    mavenCentral()
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:19.0.0'
    api 'net.dv8tion:JDA:4.3.0_307'
    api 'org.slf4j:slf4j-simple:1.7.30'
    api 'org.slf4j:jul-to-slf4j:1.7.30'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.11.2'
    implementation 'com.squareup.okhttp3:okhttp:4.8.1'
    implementation 'io.github.classgraph:classgraph:4.8.102'
}
